# ufdr-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
src/: lib.rs  main.rs  utils.rs
src/models/: access_info.rs  case_information.rs  commons.rs  data_field.rs  decoded_data.rs  file.rs  images.rs  metadata.rs  mod.rs  model.rs  model_field.rs  model_type.rs  multi_field.rs  multi_model_field.rs  parse_error.rs  project.rs  source.rs  source_extractions.rs  tagged_files.rs  timestamp.rs  utils.rs
src/ufdr/: __init__.py
